# desyncd

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
crates/desyncd-adapt/: Cargo.toml
crates/desyncd-adapt/src/: dns.rs  lib.rs  morphing.rs  probe.rs  scheduler.rs  search.rs
crates/desyncd-cli/: Cargo.toml
crates/desyncd-cli/src/: main.rs
crates/desyncd-config/: Cargo.toml
crates/desyncd-config/src/: lib.rs
crates/desyncd-desync/: Cargo.toml
crates/desyncd-desync/src/: ccs_inject.rs  combo.rs  disorder.rs  fake_packet.rs  http_host.rs  lib.rs  multi_stream_frag.rs  padding.rs  slow_split.rs  sni_manip.rs  tcp_split.rs  technique.rs  testutil.rs  tls_record_frag.rs
crates/desyncd-dns/: Cargo.toml
crates/desyncd-dns/src/: lib.rs
crates/desyncd-gui/: Cargo.toml  tauri.conf.json
crates/desyncd-gui/capabilities/: default.json
crates/desyncd-gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/desyncd-gui/frontend/src/: App.svelte
crates/desyncd-gui/frontend/src/lib/: AdaptPanel.svelte  ConfigPanel.svelte  StatusPanel.svelte  StrategyPanel.svelte  TestPanel.svelte
crates/desyncd-gui/icons/: icon.icns
crates/desyncd-gui/src/: main.rs
crates/desyncd-nfq/: Cargo.toml
crates/desyncd-nfq/src/: connstate.rs  lib.rs  raw_packet.rs
crates/desyncd-packet/: Cargo.toml
crates/desyncd-packet/src/: http.rs  lib.rs  quic.rs  tls.rs
crates/desyncd-platform/: Cargo.toml
crates/desyncd-platform/src/: firewall.rs  lib.rs
crates/desyncd-proxy/: Cargo.toml
crates/desyncd-proxy/src/: action.rs  connstate.rs  http_connect.rs  lib.rs  relay.rs  socks5.rs  transparent.rs
crates/desyncd-store/: Cargo.toml
crates/desyncd-store/src/: lib.rs  queries.rs  schema.rs
crates/desyncd-strategy/: Cargo.toml
crates/desyncd-strategy/src/: lib.rs
crates/desyncd-types/: Cargo.toml
crates/desyncd-types/src/: lib.rs
docs/: TECHNIQUES.md  desyncd.1
examples/: aggressive.toml  basic.toml  isp-template.toml  youtube.toml
resources/: default_config.toml
