[package]
name = "desyncd-dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "time", "sync", "rt"] }
tracing.workspace = true
anyhow.workspace = true
fastrand.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
