[package]
name = "desyncd-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
desyncd-config = { path = "../desyncd-config" }
desyncd-proxy = { path = "../desyncd-proxy" }
desyncd-strategy = { path = "../desyncd-strategy" }
desyncd-adapt = { path = "../desyncd-adapt" }
desyncd-store = { path = "../desyncd-store" }
desyncd-types = { path = "../desyncd-types" }
desyncd-desync = { path = "../desyncd-desync" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
anyhow.workspace = true
toml.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
