[package]
name = "desyncd-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
desyncd-types = { path = "../desyncd-types" }
desyncd-packet = { path = "../desyncd-packet" }
desyncd-desync = { path = "../desyncd-desync" }
desyncd-strategy = { path = "../desyncd-strategy" }
desyncd-dns = { path = "../desyncd-dns" }
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros", "time"] }
tracing.workspace = true
anyhow.workspace = true
bytes.workspace = true
fastrand.workspace = true
