[package]
name = "desyncd-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
desyncd-types = { path = "../desyncd-types" }
desyncd-desync = { path = "../desyncd-desync" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
